# freeisle

./: LICENSE  gcovr.cfg  meson.build
.github/workflows/: main.yml
src/: meson.build
src/engine/: meson.build
src/engine/base64/: Base64.cc  Base64.hh  meson.build
src/engine/base64/test/: TestBase64.cc  meson.build
src/engine/core/: Bitmask.hh  Color.hh  Enum.hh  EnumMap.hh  Grid.hh  Ptr.hh  Sentinel.hh  String.cc  String.hh  meson.build
src/engine/core/test/: TestBitmask.cc  TestEnum.cc  TestEnumMap.cc  TestGrid.cc  TestPtr.cc  TestSentinel.cc  TestString.cc  meson.build
src/engine/core/test/util/: Util.hh
src/engine/def/: Collection.hh  ContainerDef.hh  DamageType.hh  DecorationDef.hh  Goal.hh  Level.hh  Location.hh  MapDef.hh  Resupply.hh  Scenario.hh  ShopDef.hh  TerrainType.hh  UnitDef.hh  WeaponDef.hh
src/engine/def/serialize/: AuxData.hh  CollectionLoaders.hh  CollectionSavers.hh  MapDefHandlers.cc  MapDefHandlers.hh  ScenarioHandlers.cc  ScenarioHandlers.hh  ShopDefHandlers.cc  ShopDefHandlers.hh  UnitDefHandlers.cc  UnitDefHandlers.hh  meson.build
src/engine/def/serialize/test/: TestCollectionLoaders.cc  TestCollectionSavers.cc  TestMapDefHandlers.cc  TestScenarioHandlers.cc  TestShopDefHandlers.cc  TestUnitDefHandlers.cc  meson.build
src/engine/def/serialize/test/data/: scenario.json  shop_fayetteville.json  unit_grunt.json
src/engine/fs/: Directory.cc  Directory.hh  File.cc  File.hh  FileInfo.cc  FileInfo.hh  Path.cc  Path.hh  meson.build
src/engine/fs/test/: TestDirectory.cc  TestFile.cc  TestPath.cc  meson.build
src/engine/fs/test/mock/: readwrite_mock.c
src/engine/fs/test/util/: TempDirFixture.hh
src/engine/json/: IncludeInfo.hh  LoadUtil.cc  LoadUtil.hh  Loader.cc  Loader.hh  SaveUtil.cc  SaveUtil.hh  Saver.cc  Saver.hh  Util.hh  meson.build
src/engine/json/test/: BitmaskLoaderTest.cc  EnumMapSaverTest.cc  LoaderTest.cc  MappedContainerLoaderTest.cc  MappedContainerSaverTest.cc  SaverTest.cc  TestBitmaskLoader.cc  TestBitmaskSaver.cc  TestEnum.cc  TestEnumMapLoader.cc  TestLoader.cc  TestSaver.cc  Util.hh  UtilTest.cc  meson.build  test.json
src/engine/json/test/data/: abc_absolute_path_error.json  abc_c_override.frag.json  abc_circular_include_error_direct.json  abc_circular_include_error_indirect.frag.json  abc_circular_include_error_indirect.json  abc_custom_error.json  abc_custom_error_in_include.json  abc_custom_error_inherited_from_sublevel_include.json  abc_custom_error_with_multilevel_include.json  abc_custom_error_with_sublevel_include.json  abc_not_found_error.json  abc_not_found_error_with_double_include.json  abc_syntax_error_in_include.json  abc_working.json  abc_working_with_double_include.json  abc_working_with_fixed_error_from_multilevel_double_include.json  abc_working_with_fixed_error_from_multilevel_include.json  abc_working_with_fixed_error_from_sublevel_include.json  abc_working_with_include.json  abc_working_with_multilevel_include.json  abc_working_with_samelevel_include.json  abc_working_with_sublevel_include.json  abc_wrong_path_error.json  binary.json  binary_error_absolute.json  binary_error_nonexisting.json  defg_custom_error.json  defg_custom_error_in_include.frag.json  defg_removal.json  defg_syntax_error.json  defg_working.json
src/engine/log/: Logger.cc  Logger.hh  Sink.hh  System.cc  System.hh  meson.build
src/engine/log/test/: TestSystem.cc  meson.build
src/engine/log/test/util/: System.hh
src/engine/png/: Png.cc  Png.hh  meson.build
src/engine/png/test/: TestPng.cc  meson.build
src/engine/png/test/mock/: png_mock.c
src/engine/state/: Container.hh  Map.hh  Player.hh  Shop.hh  State.hh  Team.hh  Unit.hh  meson.build
src/engine/state/serialize/: AuxData.hh  CollectionLoaders.hh  CollectionSavers.hh  MapDefHandlers.cc  MapDefHandlers.hh  PlayerHandlers.cc  PlayerHandlers.hh  ScenarioHandlers.cc  ScenarioHandlers.hh  Serialize.cc  Serialize.hh  ShopDefHandlers.cc  ShopDefHandlers.hh  ShopHandlers.cc  ShopHandlers.hh  StateHandlers.cc  StateHandlers.hh  UnitDefHandlers.cc  UnitDefHandlers.hh  UnitHandlers.cc  UnitHandlers.hh  meson.build
src/engine/state/serialize/test/: TestCollectionLoaders.cc  TestCollectionSavers.cc  TestMapDefHandlers.cc  TestPlayerHandlers.cc  TestScenarioHandlers.cc  TestSerialize.cc  TestShopDefHandlers.cc  TestShopHandlers.cc  TestStateHandlers.cc  TestUnitDefHandlers.cc  TestUnitHandlers.cc  meson.build
src/engine/state/serialize/test/data/: deco_flowers.json  player_rose.json  state.json  team_north.json
src/engine/time/: Clock.hh  Duration.hh  Instant.cc  Instant.hh  StopWatch.cc  StopWatch.hh  SystemClock.cc  SystemClock.hh  meson.build
src/engine/time/test/: TestDuration.cc  TestInstant.cc  TestStopWatch.cc  TestSystemClock.cc  meson.build
src/engine/time/test/mock/: clock_gettime_mock.c
